update dependency to the latest version

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-geek-time",
+  "name": "alex-development-react-example",
   "version": "1.0.0",
   "description": "",
   "keywords": [],
@@ -8,18 +8,18 @@
     "antd": "3.7.1",
     "axios": "0.18.0",
     "d3": "5.5.0",
-    "react": "16.4.1",
-    "react-dom": "16.4.1",
+    "react": "16.13.1",
+    "react-dom": "16.13.1",
     "react-loadable": "5.5.0",
-    "react-redux": "5.0.7",
-    "react-router": "latest",
+    "react-redux": "7.1.3",
+    "react-router": "5.2.0",
     "react-router-dom": "4.3.1",
-    "react-scripts": "1.1.4",
-    "redux": "4.0.0",
-    "redux-logger": "3.0.6",
+    "react-scripts": "3.4.3",
+    "redux": "4.0.5",
+    "redux-logger": "4.0.0",
     "redux-thunk": "2.3.0",
-    "reselect": "3.0.1",
-    "simple-cache-provider": "0.7.0"
+    "reselect": "4.0.0",
+    "simple-cache-provider": "0.10.0"
   },
   "devDependencies": {},
   "scripts": {
