--- a/package.json
+++ b/package.json
@@ -1,20 +1,20 @@
 {
-  "name": "fork-latest",
+  "name": "alex-development-react-example",
   "version": "1.0.0",
   "description": "",
   "keywords": [],
   "main": "src/index.js",
   "dependencies": {
-    "antd": "4.8.3",
-    "axios": "0.21.0",
-    "d3": "6.1.1",
+    "antd": "3.7.1",
+    "axios": "0.18.0",
+    "d3": "5.5.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-loadable": "5.5.0",
     "react-redux": "7.1.3",
     "react-router": "5.2.0",
-    "react-router-dom": "5.1.1",
-    "react-scripts": "3.4.4",
+    "react-router-dom": "4.3.1",
+    "react-scripts": "3.4.3",
     "redux": "4.0.5",
     "redux-logger": "4.0.0",
     "redux-thunk": "2.3.0",
